objects/FieloEE__Promotion__c.object
<CustomObject>
    <description>Campaigns consisting of rules that are only valid for a period of time.</description>
    <fields>
        <fullName>FieloEE__CountDays__c</fullName>
        <formula>FieloEE__FinalDate__c  - FieloEE__InitialDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <description>A description for this promotion.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description for this promotion.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__FinalDate__c</fullName>
        <description>The end date for this promotion.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Set the date when this promotion will finish.</inlineHelpText>
        <label>Final Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__InitialDate__c</fullName>
        <description>The starting date for this promotion.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Set the date when this promotion will start.</inlineHelpText>
        <label>Initial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to wich this promotion belongs.</description>
        <inlineHelpText>Enter the program to which this promotion belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Profiling</label>
        <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>FieloEE__All_Promotions</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__Program__c</columns>
        <columns>FieloEE__InitialDate__c</columns>
        <columns>FieloEE__FinalDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Promotions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion</pluralLabel>
    <recordTypes>
        <fullName>FieloEE__Default_Promotion</fullName>
        <active>true</active>
        <label>Default Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Standard_Promotion</fullName>
        <active>true</active>
        <label>Standard Promotion</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloEE__Default_Promotion_Profiling</fullName>
        <active>true</active>
        <errorConditionFormula>IF(RecordType.DeveloperName = &apos;Default_Promotion&apos; &amp;&amp;  FieloEE__RedemptionRule__c != null ,
true,
false)</errorConditionFormula>
        <errorMessage>Promotion Default must not have Profiling</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloEE__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloEE__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloEE__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Modify_RecordType</fullName>
        <active>true</active>
        <description>Validate that the user wont change the recordType</description>
        <errorConditionFormula>ISCHANGED(RecordTypeId)</errorConditionFormula>
        <errorMessage>The Record Type cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Undelete_Default</fullName>
        <active>false</active>
        <errorConditionFormula>ISNULL(FieloEE__InitialDate__c )  &amp;&amp;
ISNULL( FieloEE__FinalDate__c )</errorConditionFormula>
        <errorMessage>Can not delete the Default Promotion</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloEE__Validate_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>FieloEE__InitialDate__c   &gt; FieloEE__FinalDate__c</errorConditionFormula>
        <errorMessage>Final Date must be great or equal to Initial Date</errorMessage>
    </validationRules>
</CustomObject>